# Movie-ShowTracker

./: .gitignore  README.md  index.html  package-lock.json  package.json  tailwind.config.js
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs
src/components/: MediaCard.tsx  MediaDetail.tsx  MediaRow.tsx  RatingStars.tsx  TopNav.tsx
src/lib/: database.ts  theme.ts  tmdb.ts  types.ts
src/pages/: DiscoverPage.tsx  LibraryPage.tsx  SearchPage.tsx  SettingsPage.tsx  StatsPage.tsx  WatchlistPage.tsx
